<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, DondeReciclar!</string>
    <string name="select_action">Seleccionar</string>
    <string name="app_name">Mis Guias</string>
    <string name="my_guides">Mis Guias</string>
    <string name="categories">Categorías</string>
    <string name="guide_categories">Categorías de Guías</string>
    <string name="guide_elements">Elementos de la Guía</string>
    <string name="guide_list">Lista de Guias</string>
     <string name="txt_wellcome">MisGuias</string>
    <string name="new_guide_text">Crea una nueva guía con tus sitios</string>
	<string name="open_guide">Abre Guía</string>
	<string name="navigate">Navegar</string>
	<string name="position_date_day">2</string>
	<string name="position_date_month">1</string>
	<string name="position_date_year">0</string>
	<string name="separate_date">-</string>
	<string name="today">Today</string>
	<string name="yesterday">Yesterday</string>
	<string name="two_days_ago">2 days ago</string>
	<string name="three_days_ago">3 days ago</string>
	
	<string name="ip_home_guide">http://192.168.1.11/misguias/places_xml.php?guide_id=</string>
	<string name="ip_home_place">http://192.168.1.11/misguias/place_xml.php?place_id=</string>
	<string name="ip_home_guide_images">http://192.168.1.11/misguias/FILEUPLOAD/guide_images/thumbs/</string>
	<string name="ip_home_place_images">http://192.168.1.11/misguias/FILEUPLOAD/places_images/thumbs/</string>
	<string name="ip_home_category">http://192.168.1.11/misguias/categories_places_xml.php?category_id=</string>
	<string name="ip_home_category_xml">http://192.168.1.11/misguias/categories_xml.php</string>
	<string name="ip_home_info_location">http://192.168.1.11/misguias/info_location.php?id=</string>
	
	
	
	
	<string name="settings">Configuración</string>
	<string name="settings_text">Configura tus preferencias</string>
	<string name="open_guide_text">Abre una guía y descubre sitios cercanos</string>
     <string name="txt_wellcome_advice">Crea tus propias guías y compártelas</string>
    <string name="edit_list">Elementos de la lista</string>
    <string name="no_list">No existe ninguna lista</string>
    <string name="menu_filter">Filtrar</string>
    <string name="menu_delete_all">Borrar todas las listas</string>
    <string name="menu_import">Importar Lista</string>
    <string name="of">of</string>
    <string name="menu_satellite">Vista Satélite</string>
    <string name="menu_traffic">Vista Callejero</string>
    <string name="my_location">Mi ubicación</string>
    <string name="new_poi">Nuevo punto</string>
    <string name="no_gps">Debe tener el GPS activado para poder buscar su ubicación</string>
    <string name="no_gps_near">Debe tener el GPS activado para para encontrar el punto más cercano</string>
    <string name="metres">metros</string>
    <string name="kilometres">km</string>
    <string name="punto_limpio">Punto Limpio</string>
    <string name="restaurante">Restaurante</string>
    <string name="sincategoria">Sin categoria</string>
    <string name="tienda">Tienda</string>
    <string name="pilas">Reciclaje de pilas</string>
    <string name="denuncia">Denuncia ambiental</string>
    <string name="interesante">Punto interesante</string>
    <string name="ropa">Ropa</string>
    <string name="otro">Otro</string>
    <string name="actions">Acciones</string>
    <string name="type">type</string>
    <string name="preferences">Preferencias</string>
    <string name="address">Dirección</string>
	<string name="_id">Id en BBDD</string>
    <string name="more_info">Más información</string>
    <string name="type_location">Cómo hacerlo</string>
    <string name="search_gps">Buscando ubicación. Una vez que encuentre su posición inténtelo de nuevo</string>
    <string name="comment_address">Comentario a la dirección</string>
    <string name="comment_name">Nombre del lugar</string>
    <string name="description">Descripción</string>
    <string name="comment">Comentario</string>
    <string name="contact">Contacto</string>
    <string name="more_information">Más información</string>
    <string name="info_new_poi">Información del punto</string>
    <string name="save">Guardar</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="back">Volver</string>
    <string name="upload_image">Subir imagen</string>
    <string name="image">Imagen</string>
     <string name="select_category">Selecciona tipo</string>
      <string name="select_list">Selecciona lista</string>
    
    <string name="go_to">Ir al punto</string>
    <string name="share">Compartir</string>
    <string name="comments">Comentarios</string>
	<string name="take_photo">Para hacer una nueva fotografía pulsa el botón MENU</string>
	<string name="alert_dialog_upload">Subiendo</string>
	<string name="dialog_upload_preparing">Preparando archivos</string>
	<string name="upload_end">Localización subida correctamente</string>
	<string name="upload_end_error">Se ha producido un error al subir la información. Inténtelo de nuevo. Si error persiste háganoslo saber a contacto@dondereciclar.com</string>
	
	<string name="uploading_image">Subiendo imagen</string>
	<string name="resize_image">Redimensionando imagen</string>
	<string name="search_location">Buscando ubicación...</string>
	<string name="show_near_location">Mostrando los puntos más cercanos a tu posición...</string>
	
	<string name="title_prf_user">Usuario de DondeReciclar.com</string>
	<string name="title_prf_username">Nombre de usuario</string>
	<string name="summary_prf_username">Nombre de usuarios en DondeReciclar.com</string>
	<string name="dialog_prf_username">Escribe nombre</string>
	<string name="title_prf_pass">Contraseña</string>
	<string name="summary_prf_pass">Contraseña en DondeReciclar.com</string>
	<string name="dialog_prf_pass">Escribe contraseña</string>
	
	<string name="title_prf_verifyuser">Comprobar usuario</string>
	<string name="summary_prf_verifyuser">Comprueba si el nombre y contraseña son correctos</string>
	
	<string name="title_prf_newuser">Crear nuevo usuario</string>
	<string name="summary_prf_newuser">Crea uno nuevo si todavía no estás dado de alta</string>
		
	<string name="verify_user_1">El usuario</string>
	
	<string name="verify_user_2_true">es un usuario activo de DondeReciclar.com</string>
	<string name="verify_user_2_false">no es un usuario válido de DondeReciclar.com. Por favor comprueba la información e inténtalo de nuevo. Si sigue pasando ponte en contacto con nosotros en contacto@dondereciclar.com</string>
	
	<string name="alert_dialog_preferences">Ir a preferencias</string>
	<string name="alert_dialog_cancel">Cancelar</string>
	
	<string name="txt_new">Nuevo</string>
	
	<string name="say">dice</string>
	
	<string name="write_comment">Publicar comentario</string>
	<string name="publish">Publicar</string>
	
	<string name="title_question_nouser">Usuario no válido</string>
	<string name="msg_question_nouser">Para poder agregar puntos debe estar dado de alta en la web de DondeReciclar.com. Por favor revisa las preferencias e introduce los datos de usuario o date de alta</string>
	
	<string name="no_comments">No existen comentarios por el momento</string>
	
	<string name="info_point">Información del punto</string>
	
	<string name="alert_dialog_comment">Escriba su comentario</string>
	
	<string name="alert_dialog_search">Escriba la dirección a buscar</string>
	
	<string name="more_comments">Más comentarios</string>
	
	<string name="access_more_comments">Ver todos los comentarios</string>
	
	<string name="upload_comment">Subiendo comentario</string>
	<string name="save_comment">Comentario grabado correctamente</string>
	
	<string name="distance">Distancia a la que se encuentra</string>
	
	<string name="title_question_delete">Borrar</string>
	
	<string name="question_delete">¿Seguro que quieres borrar este punto?</string>
	
	<string name="delete_end">Localización borrada correctamente</string>
	<string name="delete_end_error">Se ha producido al intentar borrar la localización. Inténtelo de nuevo. Si error persiste háganoslo saber a contacto@dondereciclar.com</string>
	
	<string name="no_points">No hay puntos</string>
	<string name="found">encontrados</string>
	<string name="page">Página</string>
	
	<string name="hasimage">Ya existe una imagen vinculada a la localización</string>

	<string name="search">Buscar</string>
	
	<string name="my_points">Mis puntos</string>
	
	<string name="all_points">Mostrar todos</string>
	
	<string name="no_search">No se ha encontrado ningún resultado</string>
	<string name="lastLocation">No hay lugares más alejados</string>
	<string name="you_say">Quiso decir</string>
	
	<string name="msg_nouser">Debe ser usuario de DondeReciclar.com para poder usar esta opción. Por favor revisa las preferencias e introduce los datos de usuario o date de alta</string>
	
	<string name="msg_mypoint">Mostrando sólo los puntos del usuario</string>
	
	<string name="msg_allpoint">Mostrando todos los puntos</string>
	
	<string name="title_prf_category">Categorías por defecto</string>
	<string name="title_prf_PuntosLimpios">Punto Limpios</string>
	<string name="summary_prf_PuntosLimpios">Muestra por defecto los puntos limpios encontrados en el mapa.</string>
	<string name="title_prf_Pilas">Pilas</string>
	<string name="summary_prf_Pilas">Muestra por defecto los puntos de reciclaje de pilas en el mapa.</string>
	<string name="title_prf_DenunciaAmbiental">Denuncias Ambientales</string>
	<string name="summary_prf_DenunciaAmbiental">Muestra por defecto los puntos de denuncias ambientales en el mapa.</string>
	<string name="title_prf_Ropa">Ropa</string>
	<string name="summary_prf_Ropa">Muestra por defecto los puntos de reciclaje de ropa en el mapa.</string>
	<string name="title_prf_Otros">Otros</string>
	<string name="summary_prf_Otros">Muestra por defecto los puntos de categorias diversas en el mapa.</string>
	
	<string name="subject_share">Punto interesante en DondeReciclar</string>
	<string name="text_share">DondeReciclar: </string>
	
	<string name="speed_connection">Velocidad de conexión</string>
	<string name="speed_text_connection">Está conectado mediante 2G, una conexión a internet demasiado lenta y puede que DondeReciclar no funcione del todo bien. Le recomendamos usar 3G o Wifi.</string>
	
	<string name="change_now">Cambiar ahora</string>
	<string name="no_change">Dejarlo así</string>	
	
	<string name="poi_inappropriate">Avisar de información errónea</string>
	<string name="inappropriate">Información errónea</string>
	
	<string name="inappropriate_subject">Contenido inadecuado en DondeReciclar.com</string>
	
	<string name="pre_inappropriate_body">URL del POI</string>
	
	<string name="post_inappropriate_body">Por favor explique a continuación con la máxima precisión el error que ha encontrado en el punto que estaba visitando.</string>
	<string name="new_guide">Nueva Guia</string>
    <string name="new_guide_title">Nombre de la Guía</string>
	<string name="guide_title_comment">Elije un nombre descriptivo</string>
	
	
</resources>
