<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"    
    >
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/mapaguia">


            <LinearLayout 
                android:layout_height="fill_parent"
                android:layout_width="fill_parent" 
                android:layout_weight="1"
                android:gravity="center" 
                android:layout_marginTop="170dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/txt_wellcome"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/txt_wellcome_advice"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp"
                    android:textStyle="bold" />

            </LinearLayout>

</LinearLayout>

    
           <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
             >

				<Button
				    android:id="@+id/newguide"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:background="@null"
				    android:drawableLeft="@drawable/newguide"
				    android:drawableRight="@drawable/go_right"
				    android:gravity="left|center_vertical"
				    android:drawablePadding="20dp"
				    android:paddingBottom="20dp"
				    android:paddingLeft="10dp"
				    android:paddingRight="10dp"
				    android:paddingTop="20dp"
				    android:text="@string/new_guide"
				    android:textSize="15sp" />

				<View
    				android:layout_width="fill_parent"
    				android:layout_height="0.5dp"
    				android:background="@android:color/darker_gray"/>
				
				<Button
				    android:id="@+id/openguide"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:background="@null"
				    android:drawableLeft="@drawable/openlist"
				    android:drawableRight="@drawable/go_right"
				    android:gravity="left|center_vertical"
				    android:drawablePadding="20dp"
				    android:paddingBottom="20dp"
				    android:paddingLeft="10dp"
				    android:paddingRight="10dp"
				    android:paddingTop="20dp"
				    android:text="@string/my_guides"
				    android:textSize="15sp" />

				<View
    				android:layout_width="fill_parent"
    				android:layout_height="0.5dp"
    				android:background="@android:color/darker_gray"/>                

				<Button
				    android:id="@+id/categories"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:background="@null"
				    android:drawableLeft="@drawable/openlist"
				    android:drawableRight="@drawable/go_right"
				    android:gravity="left|center_vertical"
				    android:drawablePadding="20dp"
				    android:paddingBottom="20dp"
				    android:paddingLeft="10dp"
				    android:paddingRight="10dp"
				    android:paddingTop="20dp"
				    android:text="@string/categories"
				    android:textSize="15sp" />

				<View
    				android:layout_width="fill_parent"
    				android:layout_height="0.5dp"
    				android:background="@android:color/darker_gray"/> 
                   <TextView
			        android:id="@+id/txBienvenida"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:gravity="center"
			        android:paddingTop="20dp"
			        android:text="PFC Eduardo Castella 2012"
			        android:textColor="#000000"
			        android:textStyle="bold" 
			        android:textSize="13dp" />
			    
			    <TextView
			        android:id="@+id/txBienvenida"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:gravity="center"
			        android:text="www.misguias.com"
			        android:textColor="#000000"
			        android:textStyle="bold" 
			        android:textSize="11dp" />
						</LinearLayout>
			

</LinearLayout>
